-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8u60, 9
-
Component/s: client-libs
-
b70
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8135924 | emb-9 | Unassigned | P4 | Resolved | Fixed | team |
| JDK-8129169 | 8u65 | Andrew Brygin | P4 | Resolved | Fixed | b02 |
| JDK-8085956 | 8u60 | Andrew Brygin | P4 | Resolved | Fixed | b20 |
| JDK-8138244 | emb-8u65 | Unassigned | P4 | Resolved | Fixed | b02 |
| JDK-8129693 | emb-8u60 | Andrew Brygin | P4 | Resolved | Fixed | b20 |
We do not use 3D textures to lookup gamma adjusted colors anymore.
So the code related to gamma LUTs needs to be removed from OGL text renderer.
So the code related to gamma LUTs needs to be removed from OGL text renderer.
- backported by
-
JDK-8085956 OGL text renderer: gamma lut cleanup
-
- Resolved
-
-
JDK-8129169 OGL text renderer: gamma lut cleanup
-
- Resolved
-
-
JDK-8129693 OGL text renderer: gamma lut cleanup
-
- Resolved
-
-
JDK-8135924 OGL text renderer: gamma lut cleanup
-
- Resolved
-
-
JDK-8138244 OGL text renderer: gamma lut cleanup
-
- Resolved
-