8085910: OGL text renderer: gamma lut cleanup

Reviewed-by: serb, prr